Projeto Atualizado para Quiz de Linux

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iconuser"
+        android:layout_width="190dp"
+        android:layout_height="160dp"
+        android:src="@drawable/icontuxnobg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -124,7 +124,6 @@
         android:id="@+id/lytSignAutoIcon"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
-        app:boxBackgroundColor="@color/amber0"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
         android:hint="@string/cone_do_perfil"
