--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -2,11 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/amber0"/>
         </shape>
     </item>
     <item>
-        <bitmap android:src="@drawable/iconcat"
+        <bitmap android:src="@drawable/icontux"
             android:gravity="center"/>
     </item>
 </layer-list>
