--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -9,6 +9,16 @@
     tools:context=".view.SignActivity">
 
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="165dp"
+        android:layout_height="165dp"
+        android:layout_marginBottom="38dp"
+        android:src="@drawable/icontuxnobg"
+        app:layout_constraintBottom_toTopOf="@+id/lytEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
@@ -42,7 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.366"
+        app:layout_constraintVertical_bias="0.405"
         app:startIconDrawable="@drawable/clipemail">
 
         <com.google.android.material.textfield.TextInputEditText
