--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#00000000</item>
+        <!--<item name="android:statusBarColor">#00000000</item>-->
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/amber0</item>
         <item name="android:windowActivityTransitions">true</item>
