--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,5 +13,5 @@
         android:layout_width="match_parent"
         android:layout_height="162dp"
         android:background="@color/amber0"
-        android:src="@drawable/iconarchlinux" />
+        android:src="@drawable/arch" />
 </LinearLayout>
